--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
               <a href="https://link.springer.com/chapter/10.1007/978-981-16-6448-9_41" target="_blank" rel="noopener noreferrer">View Project</a>
             </div>
             <div class="project">
-              <img style="height:270px;width:auto;" src="images/autoenc.png" alt="Project 2">
+              <img style="height:270px;width:auto;" src="images/autoenc.PNG" alt="Project 2">
               <h3>Autoencoder based Network Anomaly Detection</h3>
 		<h4>October 2020</h4>
               <p>Examined NLS-KDD dataset to train and evaluate performance of Denoising, Sparse and hybrid Autoencoders for Network Intrusion Detection. Presented at IEEE - TEMSMET 2020. </p>
