Research Projects Added

--- a/index.html
+++ b/index.html
@@ -82,10 +82,11 @@
       .project a {
         background-color: #00c3a7; /* Ocean green color */
         color: white;
-        display: block;
-        padding: 5px;
-        font-size: 0.8em; /* Make the font smaller */
+        display: inline-block;
+        padding: 10px 15px;
+        font-size: 14px; /* Make the font smaller */
         text-align: center;
+border-radius: 10px;
         text-decoration: none;
       }
       footer {
@@ -135,6 +136,7 @@
               <img style="height:270px;width:auto;" src="images/DR.png" alt="Project 1">
               <h3>Diabetic Retinopathy Diagnosis with InceptionResNetV2, Xception and EfficientNetB3</h3>
 		<h4> December 2020</h4>
+		<h4>Tech Stack: Python, Tensorflow, Keras and SciKit-Learn</h4>
               <p>Investigated performance of transfer learning enhanced models on India-specific IDRiD dataset and experimented with data augmentation; Improved accuracy. Presented at ICRTAC 2020. </p>
               <a href="https://link.springer.com/chapter/10.1007/978-981-16-6448-9_41" target="_blank" rel="noopener noreferrer">View Project</a>
             </div>
@@ -142,22 +144,26 @@
               <img style="height:270px;width:auto;" src="images/autoenc.PNG" alt="Project 2">
               <h3>Autoencoder based Network Anomaly Detection</h3>
 		<h4>October 2020</h4>
+		<h4>Tech Stack: Python, Tensorflow, Keras and SciKit-Learn</h4>
               <p>Examined NLS-KDD dataset to train and evaluate performance of Denoising, Sparse and hybrid Autoencoders for Network Intrusion Detection. Presented at IEEE - TEMSMET 2020. </p>
               <a href="https://ieeexplore.ieee.org/abstract/document/9557464" target="_blank" rel="noopener noreferrer">View Project</a>
             </div>
           </div>
           <div class="project-row">
             <div class="project">
-              <img src="project3.jpg" alt="Project 3">
-              <h3>Project 3</h3>
-              <p>Insert details about your third research project here.</p>
-              <a href="#">View Project</a>
+              <img style="height:270px;width:auto;" src="images/breakhis.PNG" alt="Project 3">
+              <h3>Breast Cancer Histopathological Image Classification</h3>
+		<h4>August 2020</h4>
+		<h4>Tech Stack: Python, Tensorflow, Keras and SciKit-Learn</h4>
+              <p>Conducted analysis on models based on EfficientNet Architecture to classify breast cancer histopathological images; Performance exceeded prior SOTA ResNet & DenseNet models. Presented at IEEE-TEMSMET 2020. </p>
+              <a href="https://ieeexplore.ieee.org/abstract/document/9557441" target="_blank" rel="noopener noreferrer">View Project</a>
             </div>
             <div class="project">
-              <img src="project4.jpg" alt="Project 4">
-              <h3>Project 4</h3>
-              <p>Insert details about your fourth research project here.</p>
-              <a href="#">View Project</a>
+              <img style="height:270px;width:auto;" src="images/car.PNG" alt="Project 4">
+              <h3>Used Car Price Prediction using Supervised Learning Methodologies</h3><h4>December 2019</h4>
+		<h4>Tech Stack: SAS and Python</h4>
+              <p>Tested the effectiveness of different machine learning models in predicting the price of used cars. Presented at the 2nd World Summit on Advances in Science, Eng. and Technology, Indiana, October 2019.</p>
+              <a href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=ArPyUn4AAAAJ&authuser=2&citation_for_view=ArPyUn4AAAAJ:u5HHmVD_uO8C" target="_blank" rel="noopener noreferrer">View Project</a>
             </div>
           </div>
         </div>
@@ -167,44 +173,44 @@
         <div class="section-content">
           <div class="project-row">
             <div class="project">
-              <img src="project5.jpg" alt="Project 5">
-              <h3>Project 5</h3>
+              <img style="height:270px;width:auto;" src="project5.jpg" alt="Project 5">
+              <h3>Project 5</h3><h4>August 2020</h4><h4>Tech Stack: </h4>
                             <p>Insert details about your fifth academic project here.</p>
-              <a href="#">View Project</a>
+              <a href="#" target="_blank" rel="noopener noreferrer">View Project</a>
             </div>
             <div class="project">
-              <img src="project6.jpg" alt="Project 6">
-              <h3>Project 6</h3>
+              <img style="height:270px;width:auto;" src="project6.jpg" alt="Project 6">
+              <h3>Project 6</h3><h4>August 2020</h4><h4>Tech Stack: </h4>
               <p>Insert details about your sixth academic project here.</p>
-              <a href="#">View Project</a>
+              <a href="#" target="_blank" rel="noopener noreferrer">View Project</a>
             </div>
           </div>
           <div class="project-row">
             <div class="project">
-              <img src="project7.jpg" alt="Project 7">
-              <h3>Project 7</h3>
+              <img style="height:270px;width:auto;" src="project7.jpg" alt="Project 7">
+              <h3>Project 7</h3><h4>August 2020</h4><h4>Tech Stack: </h4>
               <p>Insert details about your seventh academic project here.</p>
-              <a href="#">View Project</a>
+              <a href="#" target="_blank" rel="noopener noreferrer">View Project</a>
             </div>
             <div class="project">
-              <img src="project8.jpg" alt="Project 8">
-              <h3>Project 8</h3>
+              <img style="height:270px;width:auto;" src="project8.jpg" alt="Project 8">
+              <h3>Project 8</h3><h4>August 2020</h4><h4>Tech Stack: </h4>
               <p>Insert details about your eighth academic project here.</p>
-              <a href="#">View Project</a>
+              <a href="#" target="_blank" rel="noopener noreferrer">View Project</a>
             </div>
           </div>
           <div class="project-row">
             <div class="project">
-              <img src="project9.jpg" alt="Project 9">
-              <h3>Project 9</h3>
+              <img style="height:270px;width:auto;" src="project9.jpg" alt="Project 9">
+              <h3>Project 9</h3><h4>August 2020</h4><h4>Tech Stack: </h4>
               <p>Insert details about your ninth academic project here.</p>
-              <a href="#">View Project</a>
+              <a href="#" target="_blank" rel="noopener noreferrer">View Project</a>
             </div>
             <div class="project">
-              <img src="project10.jpg" alt="Project 10">
-              <h3>Project 10</h3>
+              <img style="height:270px;width:auto;" src="project10.jpg" alt="Project 10">
+              <h3>Project 10</h3><h4>August 2020</h4><h4>Tech Stack: </h4>
               <p>Insert details about your tenth academic project here.</p>
-              <a href="#">View Project</a>
+              <a href="#" target="_blank" rel="noopener noreferrer">View Project</a>
             </div>
           </div>
         </div>
