--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ border-radius: 10px;
         <div class="section-content">
           <div class="row project-row">
             <div class="col-md-6 col-xs-12 project">
-              <img style="height:300px;width:auto;" src="images/DR.png" alt="Project 1">
+              <img style="height:50%;width:50%;" src="images/DR.png" alt="Project 1">
               <h3>Diabetic Retinopathy Diagnosis with InceptionResNetV2, Xception and EfficientNetB3</h3>
 		<h4> December 2020</h4>
 		<h4>Tech Stack: Python, Tensorflow, Keras and SciKit-Learn</h4>
