--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ html {
   scroll-behavior: smooth;
 }
       body {
-        font-family: Arial, sans-serif;
+        font-family: "Times New Roman", sans-serif;
         margin: 0;
         padding: 0;
 //background-color: #07374a; /* Ocean blue color */;
@@ -99,6 +99,7 @@ border-radius: 5px;
       }
 .project {
 	padding: 20px;
+justify-content:space-between;
       }
 	.project p,h1,h2,h3,h4,h5{
 color:black;
@@ -158,7 +159,7 @@ border-radius: 10px;
         <div class="section-content">
           <div class="row project-row">
             <div class="col-md-6 col-xs-12 project">
-              <img style="height:60%;width:60%;" src="images/DR.png" alt="Project 1">
+              <img style="height:50%;width:50%;" src="images/DR.png" alt="Project 1">
               <h3>Diabetic Retinopathy Diagnosis with InceptionResNetV2, Xception and EfficientNetB3</h3>
 		<h4> December 2020</h4>
 		<h4>Tech Stack: Python, Tensorflow, Keras and SciKit-Learn</h4>
@@ -184,7 +185,7 @@ border-radius: 10px;
               <a href="https://ieeexplore.ieee.org/abstract/document/9557441" target="_blank" rel="noopener noreferrer">View Project</a>
             </div>
             <div class="col-md-6 col-xs-12 project">
-              <img style="height:50%;width:50%;" src="images/car.PNG" alt="Project 4">
+              <img style="height:40%;width:40%;" src="images/car.PNG" alt="Project 4">
               <h3>Used Car Price Prediction using Supervised Learning Methodologies</h3><h4>December 2019</h4>
 		<h4>Tech Stack: SAS and Python</h4>
               <p>Tested the effectiveness of different machine learning models in predicting the price of used cars. Presented at the 2nd World Summit on Advances in Science, Eng. and Technology, Indiana, October 2019.</p>
