--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ background: url("images/bg.jpg") no-repeat;
         position: fixed;
         top: 0;
         width: 100%;
-        z-index: 1;
+        z-index: 3;
       }
       nav ul {
         display: flex;
@@ -127,7 +127,7 @@ border-radius: 10px;
 
 :root {
   --primary: #37a9e1;
-  --primary-gradient: linear-gradient(45deg, #153c7e 0%, #37a9e1 100%);
+  //--primary-gradient: linear-gradient(45deg, #153c7e 0%, #37a9e1 100%);
 }
 .section-header {
   text-align: center;
@@ -208,7 +208,7 @@ border-radius: 10px;
   align-items: center;
   display: flex;
   justify-content: center;
-  z-index: 777;
+  z-index: 1;
 }
 
 .step-line {
