--- a/index.html
+++ b/index.html
@@ -126,13 +126,14 @@ border-radius: 10px;
 
 
 :root {
-  --primary: #37a9e1;
+  --primary: #0077be;
   //--primary-gradient: linear-gradient(45deg, #153c7e 0%, #37a9e1 100%);
 }
 .section-header {
   text-align: center;
 }
 .section-header h2 {
+	
   font-size: 28px;
   font-weight: 700;
   margin-bottom: 16px;
@@ -141,11 +142,7 @@ border-radius: 10px;
   border: 1px solid #fff;
   width: 56px;
 }
-.bg-gradient_solid {
-  background: var(--primary-gradient);
-  color: #fff;
-  padding: 48px 0;
-}
+
 .steps {
   position: relative;
   margin-top: 32px;
@@ -164,12 +161,13 @@ border-radius: 10px;
 .steps .content p {
   color: #676767;
   font-size: 16px;
+font-weight: 530;
 }
 
 .steps .content h2 {
   font-weight: 600;
   font-size: 16px;
-  color: #676767;
+  color: black;
 }
 
 .steps-container {
@@ -267,10 +265,18 @@ border-radius: 10px;
 
       <div class="container">
     <div class="section-header">
-      <h2>Our story</h2>
+      <h2>Education</h2>
       <hr>
     </div>
     <div class="steps">
+      <div class="steps-container">
+        <div class="content">
+          <h2>Maharishi Vidya Mandir (2015-2017)</h2>
+          <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
+        </div>
+        <i class="step-line"></i>
+        <div class="date">2015</div>
+      </div>
       <div class="steps-container">
         <div class="content">
           <h2>Vellore Institute of Technology (2017-2021)</h2>
@@ -281,19 +287,11 @@ border-radius: 10px;
       </div>
       <div class="steps-container">
         <div class="content">
-          <h2>Lorem ipsum dolor</h2>
+          <h2>University of Southern California (2021-2023)</h2>
           <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
         </div>
         <i class="step-line"></i>
-        <div class="date">2001</div>
-      </div>
-      <div class="steps-container">
-        <div class="content">
-          <h2>Lorem ipsum dolor</h2>
-          <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
-        </div>
-        <i class="step-line"></i>
-        <div class="date">2002</div>
+        <div class="date">2021</div>
       </div>
       <div class="steps-container">
         <div class="content">
