--- a/index.html
+++ b/index.html
@@ -166,7 +166,13 @@ font-weight: 530;
 
 .steps .content h2 {
   font-weight: 600;
-  font-size: 16px;
+  font-size: 20px;
+  color: black;
+}
+
+.steps .content h3 {
+  font-weight: 600;
+  font-size: 17px;
   color: black;
 }
 
@@ -224,8 +230,7 @@ font-weight: 530;
   }
   .steps-container {
     left: 0;
-    flex-direction: row-reverse;
-    width: auto;
+    flex-direction: row-reverse;    width: auto;
     margin-bottom: 16px;
   }
   .steps .steps-container:nth-child(even) {
@@ -257,6 +262,9 @@ font-weight: 530;
         <h2 style="color: white;">MUKKESH GANESH</h2>
         <div class="section-content">
           <p style="color: white;">Insert information about yourself as a data scientist here.</p>
+	        <div class="footer-links">
+	<p>Github:<a style="color:white;" href="www.github.com/void-mckenzie" target="_blank" rel="noopener noreferrer">void-mckenzie</a>; Email: mganesh@usc.edu , mukkeshganesh@gmail.com ; LinkedIn:<a style="color:white;" href="https://www.linkedin.com/in/mukkesh-g/" target="_blank" rel="noopener noreferrer">Mukkesh Ganesh</a></p>
+      </div>
         </div>
       </section>
 
@@ -271,27 +279,32 @@ font-weight: 530;
     <div class="steps">
       <div class="steps-container">
         <div class="content">
-          <h2>Maharishi Vidya Mandir (2015-2017)</h2>
-          <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
+          <h2>University of Southern California (2021-2023)</h2>
+	  <h3>Master of Science in Computer Science | GPA: 3.5</h3>
+          <p> <strong>Courses:</strong> Analysis of Algorithms, Artificial Intelligence, Machine Learning, Deep Learning, Natural Language Processing, Database Systems.</p>
         </div>
         <i class="step-line"></i>
-        <div class="date">2015</div>
+        <div class="date">2021</div>
       </div>
       <div class="steps-container">
         <div class="content">
           <h2>Vellore Institute of Technology (2017-2021)</h2>
-          <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
+	  <h3>Bachelor of Technology in Computer Science and Engineering | GPA: 9.32</h3>
+          <p> <strong>Selected Courses:</strong> Machine Learning, Calculus, Statistics, Parallel and Distributed Computing, Virtualization, Computer Architecture, Social and Information Networks.</p>
+	  <p> <strong>Activities:</strong> Undergraduate Research, Linux Club, Hackathons.</p>
         </div>
         <i class="step-line"></i>
         <div class="date">2017</div>
-      </div>
+       </div>
       <div class="steps-container">
         <div class="content">
-          <h2>University of Southern California (2021-2023)</h2>
-          <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
+          <h2>Maharishi Vidya Mandir (2015-2017)</h2>
+	  <h3>AISSCE | Grade: 88.4%</h3>
+          <p> <strong>Courses:</strong> Physics, Chemistry, Mathematics, English and Computer Science(100%).</p>
+	  <p> <strong>Activities:</strong> Olympiads, Quiz, Speedcubing, Keyboard.</p>
         </div>
         <i class="step-line"></i>
-        <div class="date">2021</div>
+        <div class="date">2015</div>
       </div>
       <div class="steps-container">
         <div class="content">
